--- a/adrien.html
+++ b/adrien.html
@@ -6,9 +6,9 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta content="text/html; charset=utf-8" http-equiv="content-type">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="Style.css">
+	<link rel="stylesheet" href="../Style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet">
-	<link rel="shortcut icon" href="images/Favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="../images/Favicon.ico" type="image/x-icon">
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
 		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 	<script>
@@ -20,7 +20,7 @@
 	<!-- Style.css override -->
 	<style>
 		header {
-			background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(images/Adrien.png);
+			background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../images/Adrien.png);
 			background-position: center 65%;
 		}
 	</style>
@@ -34,16 +34,16 @@
 		<div id="welTxt" class="welcome-text">
 
 			<h1>
-				Adrien Dumont Drivers Summary
+				Resumen de Adrien Dumont
 			</h1>
 
 			<b1 style="text-transform: uppercase;">
-				I was born July 2007 in Champigny-Sûr-Marne, France. I have loved Cars for as
-				long as I can remember and was born in a Family that loved Cars, being introduced to them Early on in my
-				life. I started Sim-racing online at the age of 9 on Assetto Corsa and Gran Turismo, and drove my first
-				car at the age of 11. I started racing physically December 26th 2020 in the Pacific GP League Series in
-				the Pro-Am Category. I now race in the Pacific GP Pro League Series with 425 Motorsports, and am the
-				leading Junior Driver in the Series.
+				Nací en julio de 2007 en Champigny-Sûr-Marne, Francia. Me encantan los coches desde que tengo uso de
+				razón y nací en una familia que amaba los autos, y los conocí al principio de mi vida. Empecé a correr
+				Sim-Racing online a la edad de 9 años en Assetto Corsa y Gran Turismo, y conduje mi primer auto a los 11
+				años. Empecé a competir físicamente el 26 de diciembre de 2020 en la Pacific GP League Series en la
+				categoría Pro-Am. Ahora corro en la Pacific GP Pro League Series con 425 Motorsports y soy el piloto
+				junior líder de la serie.
 			</b1>
 		</div>
 	</header>
