--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta content="text/html; charset=utf-8" http-equiv="content-type">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="Style.css">
+	<link rel="stylesheet" href="../Style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet">
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
 		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -15,24 +15,24 @@
 			$("#header").load("header.html");
 		})
 	</script>
-	
+
 	<title>Scuderia Pacifica</title>
-	<link rel="shortcut icon" href="images/Favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="../images/Favicon.ico" type="image/x-icon">
 	<!-- Social Media Stuff -->
-    <meta name="description" content="An upcoming team trying to introduce youth to Motorsports">
-    <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://www.scuderiapacifica.com">
+	<meta name="description" content="An upcoming team trying to introduce youth to Motorsports">
+	<meta name="robots" content="index, follow">
+	<link rel="canonical" href="https://www.scuderiapacifica.com">
 	<meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.scuderiapacifica.com">
-    <meta property="og:title" content="Scuderia Pacifica">
-    <meta property="og:description" content="c">
-    <meta property="og:image" content="https://www.scuderiapacifica.com/images/BackgroundImage.png">
-    <!-- Special Twitter Embeds -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://www.scuderiapacifica.com">
-    <meta property="twitter:title" content="Scuderia Pacifica">
-    <meta property="twitter:description" content="An upcoming team trying to introduce youth to Motorsports">
-    <meta property="twitter:image" content="https://www.scuderiapacifica.com/images/BackgroundImage.png">
+	<meta property="og:url" content="https://www.scuderiapacifica.com">
+	<meta property="og:title" content="Scuderia Pacifica">
+	<meta property="og:description" content="c">
+	<meta property="og:image" content="https://www.scuderiapacifica.com/images/BackgroundImage.png">
+	<!-- Special Twitter Embeds -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://www.scuderiapacifica.com">
+	<meta property="twitter:title" content="Scuderia Pacifica">
+	<meta property="twitter:description" content="An upcoming team trying to introduce youth to Motorsports">
+	<meta property="twitter:image" content="https://www.scuderiapacifica.com/images/BackgroundImage.png">
 
 	<!-- Style.css override -->
 	<style>
@@ -46,14 +46,21 @@
 			<div id="header"></div>
 			<div id="welTxt" class="welcome-text">
 				<h1>
-					We are <span> <br> Scuderia Pacifica
+					Somos
+					<br>
+					<span>
+						Scuderia Pacifica
+					</span>
+					<br>
 				</h1>
-				<br>
 				<b1 style="text-transform: uppercase;">
-					</span> An upcoming team trying to introduce youth to <span> Motorsports </span> </h1>
+					El próximo equipo que introducirá a los jóvenes a los
+					<span>
+						deportes de motor
+					</span>
 				</b1>
 				<br>
-				<a href="contact">Contact US</a>
+				<a href="contact">Contacta a nosotros</a>
 			</div>
 
 	</header>
