--- a/thomas.html
+++ b/thomas.html
@@ -6,9 +6,9 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta content="text/html; charset=utf-8" http-equiv="content-type">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="Style.css">
+	<link rel="stylesheet" href="../Style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet">
-	<link rel="shortcut icon" href="images/Favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="../images/Favicon.ico" type="image/x-icon">
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
 		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 	<script>
@@ -20,7 +20,7 @@
 	<!-- Style.css override -->
 	<style>
 		header {
-			background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(images/Thomas.jpg);
+			background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../images/Thomas.jpg);
 		}
 	</style>
 </head>
@@ -33,12 +33,10 @@
 		<div id="welTxt" class="welcome-text">
 
 			<h1>
-				Thomas Heacock Drivers Summary
+				Resumen de Thomas Heacock
 			</h1>
 			<b1 style="text-transform: uppercase;">
-				I was born on January 2010 in Washington, I have loved cars since the age of 6 thanks to my Dad. My
-				Karting Career started early 2020, practicing on Rental Karts at the Pacific GP Track in Kent. I started
-				racing February of this Year in the Pacific GP Pro-Am Series and continue to race there currently.
+				I was born on January 2010 in Washington, I have loved cars since the age of 6 thanks to my Dad. My Karting Career started early 2020, practicing on Rental Karts at the Pacific GP Track in Kent. I started racing February of this Year in the Pacific GP Pro-Am Series and continue to race there currently.
 			</b1>
 		</div>
 	</header>
