--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta content="text/html; charset=utf-8" http-equiv="content-type">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="../Style.css">
+	<link rel="stylesheet" href="Style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet">
+	<link rel="shortcut icon" href="images/Favicon.ico" type="image/x-icon">
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
 		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 	<script>
@@ -15,25 +16,8 @@
 			$("#header").load("header.html");
 		})
 	</script>
-
 	<title>Scuderia Pacifica</title>
-	<link rel="shortcut icon" href="../images/Favicon.ico" type="image/x-icon">
-	<!-- Social Media Stuff -->
-	<meta name="description" content="An upcoming team trying to introduce youth to Motorsports">
-	<meta name="robots" content="index, follow">
-	<link rel="canonical" href="https://www.scuderiapacifica.com">
-	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://www.scuderiapacifica.com">
-	<meta property="og:title" content="Scuderia Pacifica">
-	<meta property="og:description" content="c">
-	<meta property="og:image" content="https://www.scuderiapacifica.com/images/BackgroundImage.png">
-	<!-- Special Twitter Embeds -->
-	<meta property="twitter:card" content="summary_large_image">
-	<meta property="twitter:url" content="https://www.scuderiapacifica.com">
-	<meta property="twitter:title" content="Scuderia Pacifica">
-	<meta property="twitter:description" content="An upcoming team trying to introduce youth to Motorsports">
-	<meta property="twitter:image" content="https://www.scuderiapacifica.com/images/BackgroundImage.png">
-
+	
 	<!-- Style.css override -->
 	<style>
 
