--- a/drivers.html
+++ b/drivers.html
@@ -15,7 +15,7 @@
 		$(function () {
 			$("#header").load("header.html");
 		})</script>
-	<title>Drivers</title>
+	<title>Conductores</title>
 
 	<!-- Style.css override -->
 	<style>
@@ -30,7 +30,9 @@
 		</div>
 		<div id="welTxt" class="welcome-text">
 			<h1>
-				<span> Drivers </span>
+				<span>
+					Conductores
+				</span>
 			</h1>
 			<a href="damian">Damian Lopez</a>
 			<br>
