--- a/mecánico.html
+++ b/mecánico.html
@@ -15,7 +15,7 @@
 		$(function () {
 			$("#header").load("header.html");
 		})</script>
-	<title>Mechanics</title>
+	<title>Mecánico</title>
 
 	<!-- Style.css override -->
 	<style>
@@ -30,7 +30,7 @@
 		</div>
 		<div id="welTxt" class="welcome-text">
 			<h1>
-				<span>Mechanics</span>
+				<span>Mecánico</span>
 			</h1>
 			<a href="nathan">Nathan Holden</a>
 			<br>
