--- a/header.html
+++ b/header.html
@@ -1,8 +1,8 @@
 <div id="content-desktop">
     <ul class="nav-area">
         <li><a href="..">Menú</a></li>
-        <li><a href="drivers">Conductores</a></li>
-        <li><a href="mechanics">Mechanics</a></li>
+        <li><a href="conductores">Conductores</a></li>
+        <li><a href="mecánico">Mecánico</a></li>
         <li><a href="sponsors">Patrocinadores</a></li>
         <li><a href="contact">Contacta</a></li>
         <li><a style="background: none;" href="https://instagram.com/scuderia_pacifica" target=_blank>
@@ -34,9 +34,9 @@
                 <br>
                 <li><a href="..">Menú</a></li>
                 <br>
-                <li><a href="drivers">Conductores</a></li>
+                <li><a href="conductores">Conductores</a></li>
                 <br>
-                <li><a href="mechanics">Mecánico</a></li>
+                <li><a href="mecánico">mecánico</a></li>
                 <br>
                 <li><a href="sponsors">Patrocinadores</a></li>
                 <br>
