--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
         <li><a href="..">Menú</a></li>
         <li><a href="conductores">Conductores</a></li>
         <li><a href="mecánico">Mecánico</a></li>
-        <li><a href="sponsors">Patrocinadores</a></li>
+        <li><a href="patrocinadores">Patrocinadores</a></li>
         <li><a href="contact">Contacta</a></li>
         <li><a style="background: none;" href="https://instagram.com/scuderia_pacifica" target=_blank>
                 <svg style="fill: white;" width="15" height="15" viewBox="0 0 25 25">
@@ -38,7 +38,7 @@
                 <br>
                 <li><a href="mecánico">mecánico</a></li>
                 <br>
-                <li><a href="sponsors">Patrocinadores</a></li>
+                <li><a href="patrocinadores">Patrocinadores</a></li>
                 <br>
                 <li><a href="contact">Contacta</a></li>
                 <br>
