--- a/patrocinadores.html
+++ b/patrocinadores.html
@@ -15,7 +15,7 @@
 		$(function () {
 			$("#header").load("header.html");
 		})</script>
-	<title>Sponsors</title>
+	<title>Patrocinadores</title>
 
 	<!-- Style.css override -->
 	<style>
@@ -32,7 +32,7 @@
 		<div id="welTxt" class="welcome-text">
 			<h1>
 				<span>
-					Sponsors
+					Patrocinadores
 				</span>
 			</h1>
 			<a style="border: none;" href="https://www.425motorsports.com/" target=_blank>
