--- a/contacta.html
+++ b/contacta.html
@@ -31,18 +31,18 @@
 		<div id="welTxt" class="welcome-text">
 			<h1>
 				<span>
-					Contact Us (Email)
+					Contacta con nosotros (email)
 				</span>
 			</h1>
 			<h1>
 				<a href="mailto:scuderiapacificateam@gmail.com">
-					Business
+					Negocio
 				</a>
 			</h1>
 			<br>
 			<h1>
 				<span>
-					Drivers
+					Conductores
 				</span>
 			</h1>
 			<h1>
@@ -59,7 +59,7 @@
 			<br>
 			<h1>
 				<span>
-					Mechanics
+					Mecánico
 				</span>
 			</h1>
 			<h1>
