--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
         <li><a href="conductores">Conductores</a></li>
         <li><a href="mecánico">Mecánico</a></li>
         <li><a href="patrocinadores">Patrocinadores</a></li>
-        <li><a href="contact">Contacta</a></li>
+        <li><a href="contacta">Contacta</a></li>
         <li><a style="background: none;" href="https://instagram.com/scuderia_pacifica" target=_blank>
                 <svg style="fill: white;" width="15" height="15" viewBox="0 0 25 25">
                     <path
@@ -40,7 +40,7 @@
                 <br>
                 <li><a href="patrocinadores">Patrocinadores</a></li>
                 <br>
-                <li><a href="contact">Contacta</a></li>
+                <li><a href="contacta">Contacta</a></li>
                 <br>
                 <a style="background: none;" href="https://instagram.com/scuderia_pacifica" target=_blank>
                         <svg style="fill: white;" width="15" height="15" viewBox="0 0 25 25">
