made coming soon stuff

--- a/thomas.html
+++ b/thomas.html
@@ -36,7 +36,8 @@
 				Resumen de Thomas Heacock
 			</h1>
 			<b1 style="text-transform: uppercase;">
-				I was born on January 2010 in Washington, I have loved cars since the age of 6 thanks to my Dad. My Karting Career started early 2020, practicing on Rental Karts at the Pacific GP Track in Kent. I started racing February of this Year in the Pacific GP Pro-Am Series and continue to race there currently.
+				próximamente
+				<!-- I was born on January 2010 in Washington, I have loved cars since the age of 6 thanks to my Dad. My Karting Career started early 2020, practicing on Rental Karts at the Pacific GP Track in Kent. I started racing February of this Year in the Pacific GP Pro-Am Series and continue to race there currently. -->
 			</b1>
 		</div>
 	</header>
