--- a/thomas.html
+++ b/thomas.html
@@ -6,9 +6,9 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta content="text/html; charset=utf-8" http-equiv="content-type">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="Style.css">
+	<link rel="stylesheet" href="https://www.scuderiapacifica.com/style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet">
-	<link rel="shortcut icon" href="images/Favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="https://www.scuderiapacifica.com/images/favicon.ico" type="image/x-icon">
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
 		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 	<script>
@@ -20,7 +20,7 @@
 	<!-- Style.css override -->
 	<style>
 		header {
-			background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(images/Thomas.jpg);
+			background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(https://www.scuderiapacifica.com/images/Thomas.jpg);
 		}
 	</style>
 </head>
