--- a/adrien.html
+++ b/adrien.html
@@ -20,7 +20,7 @@
 	<!-- Style.css override -->
 	<style>
 		header {
-			background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(https://www.scuderiapacifica.com/images/Adrien.png);
+			background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(https://www.scuderiapacifica.com/images/adrien.png);
 			background-position: center 65%;
 		}
 	</style>
