--- a/damian.html
+++ b/damian.html
@@ -20,7 +20,7 @@
 	<!-- Style.css override -->
 	<style>
 		header {
-			background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(https://www.scuderiapacifica.com/images/Damian.png);
+			background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(https://www.scuderiapacifica.com/images/damian.png);
 			background-position: center 30%;
 		}
 	</style>
