--- a/thomas.html
+++ b/thomas.html
@@ -20,7 +20,7 @@
 	<!-- Style.css override -->
 	<style>
 		header {
-			background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(https://www.scuderiapacifica.com/images/Thomas.jpg);
+			background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(https://www.scuderiapacifica.com/images/thomas.jpg);
 		}
 	</style>
 </head>
