--- a/thomas.html
+++ b/thomas.html
@@ -36,8 +36,10 @@
 				Resumen de Thomas Heacock
 			</h1>
 			<b1 style="text-transform: uppercase;">
-				próximamente
-				<!-- I was born on January 2010 in Washington, I have loved cars since the age of 6 thanks to my Dad. My Karting Career started early 2020, practicing on Rental Karts at the Pacific GP Track in Kent. I started racing February of this Year in the Pacific GP Pro-Am Series and continue to race there currently. -->
+				Nací en enero de 2010 en Washington, me encantan los autos desde los 6 años gracias a mi papá. Mi
+				carrera en karting comenzó a principios de 2020, practicando en karts de alquiler en el Pacific GP Track
+				en Kent. Comencé a competir en febrero de este año en la serie Pacific GP Pro-Am y continúo compitiendo
+				allí actualmente.
 			</b1>
 		</div>
 	</header>
