--- a/brogan.html
+++ b/brogan.html
@@ -19,7 +19,10 @@
 
 	<!-- Style.css override -->
 	<style>
-
+		header {
+			background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(https://www.scuderiapacifica.com/images/brogan.jpg);
+			background-position: center 45%;
+		}
 	</style>
 </head>
 
@@ -28,10 +31,17 @@
 		<div class="wrapper">
 			<div id="header"></div>
 		</div>
+		</div>
 		<div id="welTxt" class="welcome-text">
 			<h1>
-				próximamente
+				Resumen de Brogan
 			</h1>
+			<b1 style="text-transform: uppercase;">
+				Hola, soy Brogan y nací en 2007. Máquinas y motores de todo tipo han sido una parte integral de mi
+				infancia desde que tengo uso de razón. Nací en Seattle y, por lo general, me pueden encontrar en un
+				banco de trabajo. o en el aeropuerto trabajando en uno de los aviones de mi papá.
+			</b1>
+		</div>
 	</header>
 </body>
 
