--- a/header.html
+++ b/header.html
@@ -1,4 +1,15 @@
-<div id="content-desktop">
+<div class="header-right">
+    <a href="..">Home</a>
+    <a href="conductores">conductores</a>
+    <a href="mecánico">Mecánico</a>
+    <a href="patrocinadores">Patrocinadores</a>
+    <a href="contacta">Contacta</a>
+    <a href="https://www.scuderiapacifica.org/language">
+        <img alt="Español" src="https://www.scuderiapacifica.org/images/lang/es-flag.png">
+    </a>
+</div>
+
+<!-- <div id="content-desktop">
     <ul class="nav-area">
         <li><a href="..">Menú</a></li>
         <li><a href="conductores">Conductores</a></li>
@@ -17,13 +28,13 @@
                 </svg> </a> </li>
         <li>
             <a href="https://www.scuderiapacifica.org/language">
-                <img alt="Español" src="https://www.scuderiapacifica.org/images/es-flag.png" height="15">
+                <img alt="Español" src="https://www.scuderiapacifica.org/images/lang/es-flag.png" height="15">
             </a>
         </li>
     </ul>
-</div>
+</div> -->
 
-<div id="content-mobile">
+<!-- <div id="content-mobile">
     <ul class="nav-area">
         <span id="BTN" onclick="openNav()">
             <svg style="fill: white;" width="30" height="30" viewBox="0 0 25 25">
@@ -58,7 +69,7 @@
                             d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z" />
                     </svg> </a>
                 <a href="https://www.scuderiapacifica.org/language">
-                    <img alt="Español" src="https://www.scuderiapacifica.org/images/es-flag.png" height="15">
+                    <img alt="Español" src="https://www.scuderiapacifica.org/images/lang/es-flag.png" height="15">
                 </a>
             </menu>
         </div>
@@ -78,4 +89,4 @@
             document.getElementById("BTN").style.display = "block";
         }
     </script>
-</div>
+</div> -->
