--- a/index.html
+++ b/index.html
@@ -2,52 +2,64 @@
 <html lang="es">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta content="text/html; charset=utf-8" http-equiv="content-type">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://www.scuderiapacifica.org/style.css">
-	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet">
-	<link rel="shortcut icon" href="https://www.scuderiapacifica.org/images/favicon.ico" type="image/x-icon">
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
-		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-	<script>
-		$(function () {
-			$("#header").load("header.html");
-		})
-	</script>
-	<title>Scuderia Pacifica</title>
-	
-	<!-- Style.css override -->
-	<style>
+    <meta charset="UTF-8">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta content="text/html; charset=utf-8" http-equiv="content-type">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.scuderiapacifica.org/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script>
+        $(function() {
+            $("#header").load("header.html");
+        })
+    </script>
 
-	</style>
+    <link rel="shortcut icon" href="https://www.scuderiapacifica.org/images/favicon.ico" type="image/x-icon">
+    <!-- Primary Meta Tags -->
+    <title>Scuderia Pacifica</title>
+    <meta name="title" content="Scuderia Pacifica">
+    <meta name="description" content="El próximo equipo que introducirá a los jóvenes a los deportes de motor">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.scuderiapacifica.org">
+    <meta property="og:title" content="Scuderia Pacifica">
+    <meta property="og:description" content="El próximo equipo que introducirá a los jóvenes a los deportes de motor">
+    <meta property="og:image" content="https://www.scuderiapacifica.org/images/background.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.scuderiapacifica.org">
+    <meta property="twitter:title" content="Scuderia Pacifica">
+    <meta property="twitter:description" content="El próximo equipo que introducirá a los jóvenes a los deportes de motor">
+    <meta property="twitter:image" content="https://www.scuderiapacifica.org/images/background.png">
+
+    <!-- Style.css override -->
+    <style>
+
+    </style>
 </head>
 
 <body>
-	<header>
-		<div class="wrapper">
-			<div id="header"></div>
-			<div id="welTxt" class="welcome-text">
-				<h1>
-					Somos
-					<br>
-					<span>
-						Scuderia Pacifica
-					</span>
-					<br>
-				</h1>
-				<b1 style="text-transform: uppercase;">
-					El próximo equipo que introducirá a los jóvenes a los
-					<span>
-						deportes de motor
-					</span>
-				</b1>
-				<br>
-				<a href="contact">Contacta a nosotros</a>
-			</div>
-
-	</header>
+	<div class="page">
+        <header id="header" class="header"></header>
+        <div class="text">
+            <h1>
+                <blue>
+                    Scuderia Pacifica
+                </blue>
+            </h1>
+            <b1>
+                El próximo equipo que introducirá a los jóvenes a los
+                <blue>
+                    deportes de motor
+                </blue>
+            </b1>
+        </div>
+    </div>
 </body>
 
 </html>
