--- a/index.html
+++ b/index.html
@@ -1,65 +1,46 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta content="text/html; charset=utf-8" http-equiv="content-type">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.scuderiapacifica.org/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script>
-        $(function() {
-            $("#header").load("header.html");
-        })
-    </script>
-
-    <link rel="shortcut icon" href="https://www.scuderiapacifica.org/images/favicon.ico" type="image/x-icon">
-    <!-- Primary Meta Tags -->
-    <title>Scuderia Pacifica</title>
-    <meta name="title" content="Scuderia Pacifica">
-    <meta name="description" content="El próximo equipo que introducirá a los jóvenes a los deportes de motor">
-
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.scuderiapacifica.org">
-    <meta property="og:title" content="Scuderia Pacifica">
-    <meta property="og:description" content="El próximo equipo que introducirá a los jóvenes a los deportes de motor">
-    <meta property="og:image" content="https://www.scuderiapacifica.org/images/background.png">
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://www.scuderiapacifica.org">
-    <meta property="twitter:title" content="Scuderia Pacifica">
-    <meta property="twitter:description" content="El próximo equipo que introducirá a los jóvenes a los deportes de motor">
-    <meta property="twitter:image" content="https://www.scuderiapacifica.org/images/background.png">
-
-    <!-- Style.css override -->
-    <style>
-
-    </style>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Scuderia Pacifica</title>
+<link href="css/style.css" rel="stylesheet">
 </head>
 
-<body>
-	<div class="page">
-        <header id="header" class="header"></header>
-        <div class="text">
-            <h1>
-                <blue>
-                    Scuderia Pacifica
-                </blue>
-            </h1>
-            <b1>
-                El próximo equipo que introducirá a los jóvenes a los
-                <blue>
-                    deportes de motor
-                </blue>
-            </b1>
-        </div>
-    </div>
-</body>
+<body class="bg-dark-navy" style="padding-top: 70px;">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-navy"> <a class="navbar-brand" href=".."><img
+        src="images/LogoV3.png" alt="Logo" class="img-header"></a>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1"
+      aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span
+        class="navbar-toggler-icon"></span> </button>
+	<div class="collapse navbar-collapse RIGHT" id="navbarSupportedContent1">
+		<ul class="navbar-nav ml-auto">
+			<li class="nav-item active"> <a class="nav-link" href="..">Incio<span class="sr-only">(current)</span></a></li>
+			<li class="nav-item"> <a class="nav-link" href="members">Members </a></li>
+			<li class="nav-item"><a class="nav-link" href="products">Productos</a> </li>
+			<li class="nav-item"> <a class="nav-link" href="partners">Socios</a></li>
+			<li class="nav-item"> <a class="nav-link" href="contact">Contacta</a></li>
+			<li class="nav-item">&nbsp;</li>
+		</ul>
+	</div>
+</nav>
+<div class="jumbotron bg-dark-navy text-center text-light">
+	<h1 class="display-4 text-yellow">Scuderia Pacifica</h1>
+	<p class="lead">El próximo equipo que introducirá a los jóvenes a los
+		<color class="text-yellow">deportes de motor</color>
+	</p>
+	<hr class="my-4">
+	<p>¡Para obtener más acceso a nuestros conductores y mecánicos, síganos aquí!</p>
+	<p class="lead"> <a href="contact" class="btn btn-primary btn-lg btn-yellow" role="button">Learn more</a></p>
+</div>
+<!-- body code goes here --> 
 
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
+<script src="js/jquery-3.4.1.min.js"></script> 
+
+<!-- Include all compiled plugins (below), or include individual files as needed --> 
+<script src="js/popper.min.js"></script> 
+<script src="js/bootstrap-4.4.1.js"></script>
+</body>
 </html>
